# ray-tracing-the-rest-of-your-life

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Camera.h  Color.h  Interval.h  ONB.h  Ray.h  Vector3.h  global.h
include/Hittable/: AABB.h  BVH.h  ConstantMedium.h  Hittable.h  HittableList.h
include/Hittable/Operation/: Operation.h  Operations.h  Subtract.h
include/Hittable/Shape/: Cuboid.h  Cylinder.h  Disk.h  Quadrilateral.h  Shape.h  Shapes.h  Sphere.h  Triangle.h
include/Hittable/Shape/Model/: Mesh.h  Model.h
include/Hittable/Transformation/: Rotate.h  Scale.h  Transformation.h  Transformations.h  Translate.h
include/Material/: Material.h
include/Texture/: Image.h  Perlin.h  Texture.h
output/: record.csv  time_record.txt
src/: Camera.cpp  Color.cpp  Interval.cpp  ONB.cpp  Ray.cpp
src/Hittable/: AABB.cpp  BVH.cpp  ConstantMedium.cpp  Hittable.cpp  HittableList.cpp
src/Hittable/Operation/: Subtract.cpp
src/Hittable/Shape/: Cuboid.cpp  Cylinder.cpp  Disk.cpp  Quadrilateral.cpp  Sphere.cpp  Triangle.cpp
src/Hittable/Shape/Model/: Mesh.cpp  Model.cpp
src/Hittable/Transformation/: Rotate.cpp  Scale.cpp  Translate.cpp
src/Material/: Material.cpp
src/Texture/: Image.cpp  Perlin.cpp  Texture.cpp
